<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManningBooksReporter</string>
    <string name="manningReporterMainTitle">Manning Books Reporter</string>
	<string name="dateFilterField">Introduce fecha</string>
	<string name="textFilterField">Introduce titulo de libro</string>
	<string name="offersMainLabel">Ofertas encontradas</string>
	<string name="currentOfferLabel">Oferta de hoy</string>
	
</resources>
