<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="top|center"
	android:orientation="vertical"
	android:background="#E0E0F4">

	<TextView
		android:id="@+id/titleView"
		android:text="@string/manningReporterMainTitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<LinearLayout
		android:id="@+id/currentOfferLayout"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:padding="15dp">

		<TextView
			android:id="@+id/currentOfferLabel"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="match_parent"
			android:text="@string/currentOfferLabel"
			android:gravity="center"/>

		<TextView
			android:id="@+id/currentOfferCode"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"/>

		<TextView
			android:id="@+id/currentOfferDate"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"/>

		<TextView
			android:id="@+id/currentOfferBook1"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"/>

		<TextView
			android:id="@+id/currentOfferBook2"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"/>

		<TextView
			android:id="@+id/currentOfferBook3"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="match_parent"/>

	</LinearLayout>

	<EditText
		android:id="@+id/dateFilter"
		android:layout_height="wrap_content"
		android:inputType="date"
		android:layout_width="wrap_content"
		android:ems="10"
		android:hint="@string/dateFilterField"/>

	<EditText
		android:id="@+id/textFilter"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:ems="10"
		android:hint="@string/textFilterField"
		android:inputType="text"/>

	<LinearLayout
		style="?android:attr/buttonBarStyle"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:orientation="horizontal"
		android:paddingBottom="10dp">

		<Button
			android:id="@+id/searchButton"
			style="?android:attr/buttonStyleSmall"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="Buscar"
			android:onClick="searchOffers"/>

		<ToggleButton
			android:id="@+id/searchOption"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:textOn="Por fecha"
			android:textOff="Por texto"
			android:text="Por texto"
			android:onClick="switchSearchOption"/>

	</LinearLayout>

	<TextView
		android:id="@+id/subtitle"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:layout_width="wrap_content"
		android:text="@string/offersMainLabel"/>

	<ScrollView
		android:id="@+id/offersView"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:padding="15dp">

		<LinearLayout
			android:id="@+id/offersList"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:padding="10dp"/>

	</ScrollView>

</LinearLayout>

